--- a/index.html
+++ b/index.html
@@ -1,36 +1,154 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Casa Criativa</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Casa Criativa</title>
 
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <img src="./assets/logo.png" alt="Imagem da Logomarca">
 
-  <p>
-    Ficar em casa em períodos longos, não deve ser nada fácil.
-  </p>
-  <p>
-    Por isso, iremos catalogar ideias, <strong>brincadeiras, jogos, filmes, livros,
-    cursos, dicas</strong> e tudo que for necessário para tornar esse momento mais
-    interessante.
-  </p>
-  <p>
-    Comece clicando em ver ideias para ver as  ideias cadastradas e contribua
-    adicionando a sua ideia.
-  </p>
+    <div id="container">
 
-  <button>+ Adicionar Ideia</button>
-  <button class="fat"> Ver Ideias</button>
+        <section id="intro">
 
-  <p id="footer">
-    Com 💜 <a href="http://rocketseat.com.br">Rocketseat</a>
-  </p>
+            <header>
+                <img src="./assets/logo.png" alt="Imagem da Logomarca">
+            </header>
 
-  <script src="index.js"></script>
+            <main>
+                <p>
+                    Ficar em casa em períodos longos, não deve ser nada fácil.
+                </p>
+                <p>
+                    Por isso, iremos catalogar ideias, <strong>brincadeiras, jogos, 
+                    filmes, livros, cursos, dicas</strong> e tudo que for necessário
+                    para tornar esse momento mais interessante.
+                </p>
+                <p>
+                    Comece clicando em ver ideias para ver as ideias cadastradas e 
+                    contribua adicionando a sua ideia.
+                </p>
+            </main>
+
+            <section id="buttons">
+                <button onclick="onOff()">+ Adicionar Ideia</button>
+                <button class="fat"> Ver Ideias</button>
+            </section>
+
+
+            <footer>
+                Com 💜 <a href="http://rocketseat.com.br">Rocketseat</a>
+            </footer>
+
+        </section>
+
+        <section id="last-ideas">
+            <div class="idea">
+                <img
+                    src="https://image.flaticon.com/icons/svg/2729/2729007.svg" 
+                    alt="Imagem de Curso de Programação">        
+
+                <div class="content">
+                    <h3>Cursos de Programação</h3>
+                    <p>Estudo</p>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Et, saepe suscipit sapiente vero voluptas 
+                        necessitatibus ut quibusdam distinctio adipisci, 
+                        repudiandae perspiciatis similique dolor voluptatem rem 
+                        quasi, asperiores doloribus nemo officiis.
+                    </div>
+                    <a href="#">Ir para Ideia</a>
+                </div>
+            </div>
+
+            <div class="idea">
+                <img
+                    src="https://image.flaticon.com/icons/svg/2729/2729005.svg" 
+                    alt="Imagem de Exercícios">        
+
+                <div class="content">
+                    <h3>Exercícios</h3>
+                    <p>Saúde</p>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Et, saepe suscipit sapiente vero voluptas 
+                        necessitatibus ut quibusdam distinctio adipisci, 
+                        repudiandae perspiciatis similique dolor voluptatem rem 
+                        quasi, asperiores doloribus nemo officiis.
+                    </div>
+                    <a href="#">Ir para Ideia</a>
+                </div>
+            </div>
+
+            <div class="idea">
+                <img
+                    src="https://image.flaticon.com/icons/svg/2729/2729027.svg" 
+                    alt="Imagem de Meditação">        
+
+                <div class="content">
+                    <h3>Meditação</h3>
+                    <p>Mentalidade</p>
+                    <div class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Et, saepe suscipit sapiente vero voluptas 
+                        necessitatibus ut quibusdam distinctio adipisci, 
+                        repudiandae perspiciatis similique dolor voluptatem rem 
+                        quasi, asperiores doloribus nemo officiis.
+                    </div>
+                    <a href="#">Ir para Ideia</a>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <!-- MODAL -->
+
+    <div id="modal" class="hide">
+        <div class="content">
+            <h1>Nova Ideia</h1>
+
+            <form action="">
+                
+                <div class="input-wrapper">
+                    <label for="title">Título da ideia</label>
+                    <input type="text" name="title">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="category">Categoria</label>
+                    <input type="text" name="category">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="image">Link da imagem</label>
+                    <input type="url" name="image">
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="description">Digite uma descrição para essa ideia</label>
+                    <textarea name="description" id="" cols="30" rows="10"></textarea>
+                </div>
+
+                <div class="input-wrapper">
+                    <label for="link">Link da ideia</label>
+                    <input type="url" name="link">
+                </div>
+
+                <a href="#" onclick="onOff()">Voltar</a>
+                <button onclick="onOff()">Salvar</button>
+                
+            </form>
+
+        </div>
+    </div>
+
+    <script src="scripts.js"></script>
 
 </body>
+
 </html>
