--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa Criativa</title>
-
+    
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -16,7 +15,9 @@
         <section id="intro">
 
             <header>
-                <img src="./assets/logo.png" alt="Imagem da Logomarca">
+                <a href="index.html">
+                    <img src="./assets/logo.png" alt="Imagem da Logomarca">
+                </a>
             </header>
 
             <main>
@@ -36,12 +37,12 @@
 
             <section id="buttons">
                 <button onclick="onOff()">+ Adicionar Ideia</button>
-                <button class="fat"> Ver Ideias</button>
+                <a href="ideias.html" class="button"> Ver Ideias</a>
             </section>
 
 
             <footer>
-                Com 💜 <a href="http://rocketseat.com.br">Rocketseat</a>
+                Com 💜 <a href="http://rocketseat.com.br" target="a_blank">Rodrigo Redivo</a>
             </footer>
 
         </section>
